@@ -1,6 +1,9 @@
 #!/usr/bin/perl -w
 #
 # $Log$
+# Revision 1.2  2004/09/03 22:56:51  jimmyo
+# Added support for SNMP probing.
+#
 # Revision 1.1  2004/05/01 10:50:53  jimmyo
 # New SNMP plugins users and load.
 #
@@ -74,6 +77,7 @@ if (!defined ($session))
 
 if (defined $ARGV[0] and $ARGV[0] eq "config")
 {
+	print "host_name $host\n";
 	print "graph_title Number of users
 graph_args --base 1000 -l 0 
 graph_vlabel number of users
