@@ -6,6 +6,7 @@ munin (work)
   * Sanitise incoming fieldnames a bit better.
   * Small layout improvements.
   * Added new options "graph_height" and "graph_width", to beter control size.
+  * Added support for SNMP probing.
   
 munin (1.1.3)
 
